--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "algoliasearch": "^3.30.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-instantsearch": "^1.7.0",
